--- a/public/fontello/demo.html
+++ b/public/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?79004421');
-      src: url('./font/fontello.eot?79004421#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?79004421') format('woff'),
-           url('./font/fontello.ttf?79004421') format('truetype'),
-           url('./font/fontello.svg?79004421#fontello') format('svg');
+      src: url('./font/fontello.eot?7050237');
+      src: url('./font/fontello.eot?7050237#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?7050237') format('woff'),
+           url('./font/fontello.ttf?7050237') format('truetype'),
+           url('./font/fontello.svg?7050237#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -211,11 +211,17 @@
     </div>
     <div class="container" id="icons">
       <div class="row">
+        <div class="span3" title="Code: 0xe800">
+          <i class="demo-icon icon-cancel">&#xe800;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe800</span>
+        </div>
         <div class="span3" title="Code: 0xe801">
           <i class="demo-icon icon-mail">&#xe801;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe801</span>
         </div>
         <div class="span3" title="Code: 0xe802">
           <i class="demo-icon icon-phone">&#xe802;</i> <span class="i-name">icon-phone</span><span class="i-code">0xe802</span>
+        </div>
+        <div class="span3" title="Code: 0xf0c9">
+          <i class="demo-icon icon-menu">&#xf0c9;</i> <span class="i-name">icon-menu</span><span class="i-code">0xf0c9</span>
         </div>
       </div>
     </div>
