--- a/public/fontello/demo.html
+++ b/public/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?7050237');
-      src: url('./font/fontello.eot?7050237#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?7050237') format('woff'),
-           url('./font/fontello.ttf?7050237') format('truetype'),
-           url('./font/fontello.svg?7050237#fontello') format('svg');
+      src: url('./font/fontello.eot?82459221');
+      src: url('./font/fontello.eot?82459221#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?82459221') format('woff'),
+           url('./font/fontello.ttf?82459221') format('truetype'),
+           url('./font/fontello.svg?82459221#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -222,6 +222,14 @@
         </div>
         <div class="span3" title="Code: 0xf0c9">
           <i class="demo-icon icon-menu">&#xf0c9;</i> <span class="i-name">icon-menu</span><span class="i-code">0xf0c9</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xf255">
+          <i class="demo-icon icon-hand-grab-o">&#xf255;</i> <span class="i-name">icon-hand-grab-o</span><span class="i-code">0xf255</span>
+        </div>
+        <div class="span3" title="Code: 0xf25a">
+          <i class="demo-icon icon-hand-pointer-o">&#xf25a;</i> <span class="i-name">icon-hand-pointer-o</span><span class="i-code">0xf25a</span>
         </div>
       </div>
     </div>
